hphp/hack/test/typecheck/coeffects/using.php.like_types.exp
File "using.php", line 8, characters 10-16:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "using.php", line 7, characters 16-17:
  From this declaration, the context of this function body provides the capability set {}
  File "using.php", line 4, characters 30-39:
  But the function being called requires the default capability set {AccessGlobals, Output, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
